--- a/css/leet.css
+++ b/css/leet.css
@@ -12,7 +12,11 @@ p {
 }
 
 code {
-    white-space: pre
+    white-space: pre;
+    color: darkred;
+    background-color: #eee;
+    border-radius: 15px;
+    padding: 0 3px;
 }
 
 a {
